--- a/readme
+++ b/readme
@@ -17,3 +17,10 @@ To achieve voltage-regulated dendritic and somatic responses, change the values 
 The Na entry ratio is defined as the ratio of total Na+ influx (1 ms before and after spike peak) to the Na+ influx (1 ms before spike peak).
 
 If you need to simulate some properties the present model can't do,please contact zangyl1983@gmail.com. I may know the answer.
+
+
+Changelog
+---------
+
+cdp_*.mod files are updated due to issue mentioned in https://github.com/neuronsimulator/nrn/pull/1955.
+CONSTANT block has no effect in the initialization of ion variables.
